Fixed the arrows alignment on the header navigation

--- a/src/_styles/modules/header.scss
+++ b/src/_styles/modules/header.scss
@@ -438,6 +438,8 @@
 
   .panel {
     position: relative;
+    display: flex;
+    align-items: center;
 
     .expandable-list {
       display: inline-block;
@@ -451,9 +453,9 @@
     .expandable-list__header-title {
       color: $white;
       font-weight: bold;
-      line-height: large-vw(60px, 100px);
+      line-height: large-vw(60px, 120px);
       text-transform: uppercase;
-      font-size: large-vw(50px, 80px);
+      font-size: large-vw(50px, 90px);
 
       @include media-breakpoint-down('md') {
         font-size: 50px;
@@ -473,13 +475,17 @@
       &:before {
         content: "";
         padding-right: 0px;
-        height: 55px;
+        height: large-vw(30px, 52px);
         display: inline-block;
         transition: all 150ms ease-in-out;
         background-image: url("hover-arrow.svg");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
+
+        @include media-breakpoint-down('md') {
+          height: 30px;
+        }
       }
 
       &:hover:before {
